Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* EBUILD_PHASE was set to setup-binpkg for pkg_setup phase w/ binpkgs-
  ebuilds expected setup however, thus EBUILD_PHASE is now set to setup
  always for pkg_setup phase.

* fixup env filtering- backslash escaping wasn't needed in the patterns
  resulting in failed matches.  Mostly protective cleanup.

* tweak cache backend to not stamp cache entries where mtime is no longer
  external w/ an mtime of '-1'.  Didn't hurt anything but was a pointless op.

* fix the cpy incremental_expansion implementation; not sure how it slipped
  in being slower then native python, but the cpy version is now 60% faster
  than the native equivalent.
  Additionally, this extension is now disabled under py2.4 since it makes
  heavy use of PySet apis.

* ticket 234; handle refs properly in dhcpformat/mke2fsformat.

* pkgcore atom objects blocks_temp_ignorable data is now stored in
  blocks_strongly; the old attr is aliased, although will be removed.

* pkgcore now supports revisions of arbitrary length (previously was <31 bits).


pkgcore 0.5.9: January 8th, 2010

* this release of pkgcore requires snakeoil >=0.3.6

* expand repository api slightly adding has_match; this is intended
  as a simple boolean check if a repo has it.  It should *only* be
  used for containment- if you need the results don't test then itermatch,
  just itermatch.

* add cpy implementation of PackageRestriction.match

* for package.provided repositories, short circuit their itermatch/match
  if there aren't any results possible.

* re-enable cpython implementation of DepSet parsing for eapi2- roughly
  a 31% speedup for current gentoo-x86 repository dependency parsing.

* performance improvements to pquery --attr alldepends; specifically
  depset.stringify_boolean is now 20% faster.

* performance improvements to pquery --attr alldepends -v


pkgcore 0.5.8: December 27th, 2009
